# AkropolisSheet

./: CMakeLists.txt
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlayerSheet.cpp  PlayerSheet.h
